5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1602_825.log
== TEST (2019-03-22 14:29:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Escreva o valor de um raio: "))
a = pi* r**2
v = 4/3*pi* r**3
print(round(a, 3))
print(round(v, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a = pi* r**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 14:30:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Escreva o valor de um raio: "))
a = math(pi* r**2)
v = math(4/3*pi* r**3)
print(round(a, 3))
print(round(v, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a = math(pi* r**2)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 14:35:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Escreva o valor de um raio: "))
from math import *
a = math(pi* r**2)
v = math(4/3*pi* r**3)
print(round(a, 3))
print(round(v, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    a = math(pi* r**2)
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 14:36:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Escreva o valor de um raio: "))
from math import *
a = (pi* r**2)
v = (4/3*pi* r**3)
print(round(a, 3))
print(round(v, 3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 14:36:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Escreva o valor de um raio: "))
from math import *
a = (pi* r**2)
v = (4/3*pi* r**3)
print(round(a, 3))
print(round(v, 3))
-- EXECUTION TIME:
0.206167
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
